--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -11,12 +11,14 @@
 @forward 'card-two-cols';
 @forward 'card-two-cols-big';
 @forward 'card-with-icon-on-top';
+@forward 'card-wizard/';
 @forward 'custom-tabs';
 @forward 'detail-page-header/';
 @forward 'exam-results/';
 @forward 'filter';
 @forward 'full-page-feedback';
 @forward 'generic-card';
+@forward 'icon-plus';
 @forward 'image-background';
 @forward 'list-card/';
 @forward 'margin-container-roundBg';
