--- a/src/components/05-components/SapphireCare_Patterns/detail-page-header/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/detail-page-header/_index.scss
@@ -67,8 +67,7 @@ $icons-size:48px;
       display: flex;
       justify-content: flex-end;
       left: 0;
-      padding: 0 15px;
-      position: absolute;
+      position: relative;
       width: 100%;
       z-index: 1;
     }
