--- a/src/components/05-components/Silk_Blocks/tabs/_index.scss
+++ b/src/components/05-components/Silk_Blocks/tabs/_index.scss
@@ -1,8 +1,10 @@
 /* Tabs */
 @use '~Settings/colors'as *;
+@use '~Settings/fonts'as *;
 
 .tabs-header {
   background-color: transparent;
+  margin-bottom: 30px;
 }
 
 
@@ -22,6 +24,7 @@
   border-bottom: 2px solid $regular-alpha;
   /*primary-color*/
   color: $sapphire-care-blue3;
+  font-family: $latin-bold;
   /*secondary-color*/
 }
 
