--- a/src/components/98-adjustments/_appointment-detail.scss
+++ b/src/components/98-adjustments/_appointment-detail.scss
@@ -1,8 +1,66 @@
+@use '~Tools/information-section'as *;
 @use '~Settings/colors'as *;
 
-#Information {
+#AppointementDetail {
   .section {
-    background-color: $sapphire-white;
-    height: 100%;
+
+    .section-title {
+      color: $sapphire-white;
+
+      .Date__Container {
+        margin: 0;
+      }
+
+      .RemainDays {
+        font-size: 12px;
+      }
+    }
+
+  }
+
+  @extend %information-section;
+
+  #Information {
+    .section {
+      height: auto;
+      padding-bottom: 10px;
+    }
+  }
+
+  #Reschedule {
+    .section {
+      background-color: $sapphire-white;
+      padding-bottom: 25px;
+
+      .reschedule__btn,
+      .reschedule__cancel {
+        align-items: center;
+        display: flex;
+        height: 48px;
+        justify-content: center;
+      }
+
+      .reschedule__btn {
+        margin-bottom: 15px;
+
+        .btn {
+          align-items: center;
+          border-radius: 24px;
+          color: $sapphire-white;
+          display: flex;
+          width: 100%;
+        }
+
+      }
+
+      .reschedule__cancel {
+        a {
+          color: $regular-red;
+        }
+      }
+
+    }
+
+
   }
 }
