--- a/src/components/98-adjustments/_exam-detail.scss
+++ b/src/components/98-adjustments/_exam-detail.scss
@@ -2,8 +2,18 @@
 @use '~Settings/fonts'as *;
 
 #ExamDetail {
+  .Title_Value {
+    color: $sapphire-white;
+  }
 
   #ExamDetailHeader {
+    .section {
+      padding-bottom: 35px;
+    }
+
+    .section-title {
+      font-size: $font-size-normal;
+    }
 
     .Title__container {
       margin-bottom: 5px;
@@ -95,7 +105,7 @@
 
   #SearchContainer {
     .section {
-      padding-top: 20px;
+      padding-top: 25px;
     }
   }
 }
