news and campaigns

--- a/src/components/05-components/screens/onboarding/_index.scss
+++ b/src/components/05-components/screens/onboarding/_index.scss
@@ -21,6 +21,10 @@
   width: calc(100% + 120px);
 }
 
+.onboarding .carousel-container {
+  width: 100%;
+}
+
 .onboarding .carousel .carousel-item {
   position: relative;
 }
