--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -21,6 +21,10 @@ img[id*='ImageBgBlue'] {
     color: $regular-alpha;
   }
 
+  .carousel-container {
+    width: 90%;
+  }
+
   #SaluteSection {
     .section {
       margin-bottom: 30px;
