--- a/src/components/04-base/_buttons.scss
+++ b/src/components/04-base/_buttons.scss
@@ -10,10 +10,10 @@
   /*primary-color*/
   border: 1px solid $regular-alpha;
   /*primary-color*/
-  border-radius: 4px;
+  border-radius: 24px;
   color: $sapphire-white;
+  font-family: $latin-bold;
   font-size: $font-size-heading4;
-  font-weight: 700;
   letter-spacing: .5px;
   line-height: 20px;
   min-height: 50px;
