--- a/src/components/05-components/SapphireCare_Patterns/icon-plus/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/icon-plus/_index.scss
@@ -11,6 +11,7 @@ $height-width:65px;
     align-items: center;
     background-color: $regular-alpha;
     border-radius: 50%;
+    box-shadow: -3px -1px 12px 3px $mid-light-grey;
     color: $sapphire-white;
     display: flex;
     height: $height-width;
