--- a/src/components/05-components/Common/layout/_shadow.scss
+++ b/src/components/05-components/Common/layout/_shadow.scss
@@ -1,5 +1,5 @@
 .shadow {
-  background: whitesmoke;
+  background: linear-gradient(180deg, rgba(245, 245, 245, 1) 0%, rgba(245, 245, 245, 0) 100%);
   height: 30px;
   opacity: 0.4;
   position: absolute;
