--- a/src/components/05-components/SapphireCare_Patterns/icon-plus/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/icon-plus/_index.scss
@@ -10,8 +10,9 @@ $height-width:65px;
   .icon-plus {
     align-items: center;
     background-color: $regular-alpha;
+    border: 3px solid;
     border-radius: 50%;
-    box-shadow: -3px -1px 12px 3px $mid-light-grey;
+    box-shadow: 0px 0px 9px 1px $regular-grey;
     color: $sapphire-white;
     display: flex;
     height: $height-width;
