--- a/src/components/01-tools/_information-section.scss
+++ b/src/components/01-tools/_information-section.scss
@@ -2,7 +2,7 @@
 @use '~Settings/colors'as *;
 
 %information-section {
-  #Information {
+  [id*='Information'] {
     .section {
       height: 100%;
       padding-bottom: 30px;
