--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -15,7 +15,7 @@ img[id*='ImageBgBlue'] {
   .header-title {
     align-items: flex-end;
     display: flex;
-    height: 100%;
+    height: 100%
   }
 
   .header-right {
@@ -39,6 +39,13 @@ img[id*='ImageBgBlue'] {
 
     .section-title {
       margin-bottom: 10px;
+    }
+
+    div[data-block='SapphireCare_Patterns.AppointmentCard'] {
+      display: inline-block;
+      margin: 0 10px 0 0;
+      white-space: normal;
+      width: 100%;
     }
   }
 
