--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -6,9 +6,10 @@ $marginContainers: 15px;
 img[id*='ImageBgWhite'],
 img[id*='ImageBgBlue'] {
   height: 100%;
-  -webkit-mask-image: -webkit-gradient(linear, left top, right bottom, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
+  height: auto;
   position: absolute;
   top: 0;
+  width: 100%;
 }
 
 [id*='HomePage'] {
