Icon Plus position and Your Information bgcolor

--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -51,7 +51,7 @@ img[id*='ImageBgBlue'] {
 
   [id*='InformationSection'] {
     .section {
-      background-color: $regular-eta;
+      background-color: $sapphire-light;
       padding-bottom: 30px;
       padding-top: 20px;
 
