--- a/src/components/05-components/SapphireCare_Patterns/icon-plus/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/icon-plus/_index.scss
@@ -7,6 +7,12 @@ $height-width:65px;
   position: fixed;
   right: 0;
 
+  .next-appointment {
+    bottom: 80px;
+    position: fixed;
+    right: 0;
+  }
+
   .icon-plus {
     align-items: center;
     background-color: $regular-alpha;
