Background Images Height

--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -5,7 +5,7 @@ $marginContainers: 15px;
 
 img[id*='ImageBgWhite'],
 img[id*='ImageBgBlue'] {
-  height: auto;
+  height: 100%;
   position: absolute;
   top: 0;
   width: 100%;
