Pull To refresh hidden

--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -11,6 +11,10 @@ img[id*='ImageBgBlue'] {
   width: 100%;
 }
 
+[data-block*="PullToRefresh"] {
+  display: none;
+}
+
 [id*='HomePage'] {
   .header-title {
     align-items: flex-end;
