--- a/src/components/98-adjustments/_exam-list.scss
+++ b/src/components/98-adjustments/_exam-list.scss
@@ -3,6 +3,15 @@
 
 [id*='ExamList'] {
 
+  .group-month {
+    border-bottom: 1px solid $light-grey;
+    color: $dark-blue;
+    font-family: 'LatoBold';
+    font-size: $font-size-heading3;
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+  }
+
   .cardInfo {
     height: auto;
     margin: 0;
