--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -14,6 +14,7 @@
 @forward 'card-wizard/';
 @forward 'custom-tabs';
 @forward 'detail-page-header/';
+@forward 'dosage-info';
 @forward 'exam-results/';
 @forward 'filter';
 @forward 'full-page-feedback';
