card profile adjust

--- a/src/components/05-components/SapphireCare_Patterns/card-profile/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-profile/_index.scss
@@ -15,6 +15,9 @@
   }
 
   &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
 
     .card-profile__title__container {
