--- a/src/components/05-components/SapphireCare_Patterns/icon-plus/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/icon-plus/_index.scss
@@ -16,9 +16,9 @@ $height-width:65px;
   .icon-plus {
     align-items: center;
     background-color: $regular-alpha;
-    border: 3px solid;
+    //border: 3px solid;
     border-radius: 50%;
-    box-shadow: 0px 0px 9px 1px $regular-grey;
+    //box-shadow: 0px 0px 9px 1px $regular-grey;
     color: $sapphire-white;
     display: flex;
     height: $height-width;
