--- a/src/components/98-adjustments/_menu.scss
+++ b/src/components/98-adjustments/_menu.scss
@@ -19,5 +19,6 @@ div[id*='MenuHeader'] {
     display: inline-block;
     margin-top: 20px;
     padding: 2px 10px;
+    width: fit-content;
   }
 }
