main-content adjust

--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -41,6 +41,10 @@ $marginContainers: 15px;
     color: $regular-alpha;
   }
 
+  .main-content {
+    top: 20px;
+  }
+
   .carousel-container {
     width: 90%;
   }
