--- a/src/components/04-base/_buttons.scss
+++ b/src/components/04-base/_buttons.scss
@@ -6,14 +6,15 @@
 .btn,
 .btn:hover,
 .btn:focus {
+  align-items: center;
   background: $regular-alpha;
-  /*primary-color*/
   border: 1px solid $regular-alpha;
-  /*primary-color*/
   border-radius: 24px;
   color: $sapphire-white;
+  display: flex;
   font-family: $latin-bold;
   font-size: $font-size-heading4;
+  justify-content: center;
   letter-spacing: .5px;
   line-height: 20px;
   min-height: 50px;
