--- a/src/components/05-components/Silk_Blocks/tabs/_index.scss
+++ b/src/components/05-components/Silk_Blocks/tabs/_index.scss
@@ -9,6 +9,7 @@
 
 
 .tabs-header-tab {
+  border-bottom: 1px solid $light-grey;
   color: $mid-dark-grey;
   font-size: 16px;
   padding: 12px 20px 15px;
