--- a/src/components/04-base/_buttons.scss
+++ b/src/components/04-base/_buttons.scss
@@ -35,6 +35,7 @@
 .btn[disabled]:active {
   background-color: $light-grey;
   border: 1px solid $light-grey;
+  border-radius: 24px;
   box-shadow: none;
   color: $mid-light-grey;
 }
@@ -79,18 +80,13 @@
 .btn-tertiary:focus {
   background-color: transparent;
   border: 1px solid $regular-alpha;
-  /*primary-color*/
   color: $regular-alpha;
-  /*primary-color*/
 }
 
 .btn-tertiary:active {
   background-color: transparent;
   border: 1px solid $regular-alpha;
-  /*primary-color*/
   color: $regular-alpha;
-  /*primary-color*/
-
   -webkit-filter: brightness(1);
   filter: brightness(1);
 }
